--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Show file on i.redd.it",
   "version": "1.0",
-  "description": "Shows only the image file (hides the default header/footer) when visiting an i.redd.it or preview.redd.it page. Doing so improves the loading speed, removes trackers and fixes the broken zooming.",
+  "description": "Shows only the image file (hides the default header/footer) when visiting an \"i.redd.it\" or \"preview.redd.it\" page. Doing so improves the loading speed, removes trackers and fixes the broken zooming.",
   "permissions": [
     "declarativeNetRequestWithHostAccess"
   ],
