Redirect `preview.redd.it` to `i.redd.it`, block [i.redd.it/favicon.ico](https://i.redd.it/favicon.ico)

--- a/firefox_mv2/manifest.json
+++ b/firefox_mv2/manifest.json
@@ -11,5 +11,6 @@
     "gecko": {
       "id": "show-file-on-ireddit-mv2@tigerros.github.io"
     }
-  }
+  },
+  "content_security_policy": "script-src 'self'"
 }
