--- a/chromium/chromium/manifest.json
+++ b/chromium/chromium/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Show file on i.redd.it",
-  "version": "1.0",
-  "description": "Shows only the image file (hides the default header/footer) when visiting an \"i.redd.it\" or \"preview.redd.it\" page. Doing so improves the loading speed, removes trackers and fixes the broken zooming.",
+  "version": "1.1",
+  "description": "Shows only the image file on \"i.redd.it\" or \"preview.redd.it\". This improves loading speed, removes trackers and fixes the broken zooming. Also redirects \"preview.redd.it\" to \"i.redd.it\".",
   "permissions": [
     "declarativeNetRequestWithHostAccess"
   ],
