--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -26,3 +26,10 @@ jobs:
         run: |
           npm install
           gulp
+
+      - name: Stage changed files
+        run: git add .
+      - name: Commit changed files
+        run: git commit -m "Add chromium.zip"
+      - name: Push code to master
+        run: git push origin HEAD:master
