Add name to git
Piece of shit wants my name how about you fuck off

--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -27,6 +27,8 @@ jobs:
           npm install
           gulp
 
+      - name: Configure git name
+        run: git config --global user.name "Minifier"
       - name: Stage changed files
         run: git add .
       - name: Commit changed files
