--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -26,7 +26,10 @@ jobs:
         run: |
           npm install
           gulp
-
+      - name: Configure git name and email
+        run: |
+          git config user.name "Minifier"
+          git config user.email "tigerros.gh@gmail.com"
       - name: Stage changed files
         run: git add .
       - name: Commit changed files
