Add name to git
Piece of shit wants my name how about you fuck off

--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -28,7 +28,7 @@ jobs:
           gulp
       - name: Configure git name and email
         run: |
-          git config user.name "Minifier"
+          git config user.name "tigerros"
           git config user.email "tigerros.gh@gmail.com"
       - name: Stage changed files
         run: git add .
