--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -22,10 +22,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Minify
+      - name: Minify and create chromium.zip
         run: |
           npm install
-          gulp
+          gulp minify
+          gulp chromiumzip
       - name: Configure git name and email
         run: |
           git config user.name "Minifier"
