--- a/firefox/firefox_mv3/manifest.json
+++ b/firefox/firefox_mv3/manifest.json
@@ -14,5 +14,7 @@
       "strict_min_version": "109.0"
     }
   },
-  "content_security_policy": "script-src 'self'"
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'"
+  }
 }
