--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           git config user.name "Minifier"
           git config user.email "tigerros.gh@gmail.com"
+      - name: Git status
+        run: git status
       - name: Stage changed files
         run: git add chromium.zip
       - name: Commit changed files
