--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -31,10 +31,8 @@ jobs:
         run: |
           git config user.name "Minifier"
           git config user.email "tigerros.gh@gmail.com"
-      - name: Git status
-        run: git status
-      - name: Stage changed files
-        run: git add chromium.zip
+      - name: Stage chromium/chromium.zip
+        run: git add chromium/chromium.zip
       - name: Commit changed files
         run: git commit -m "Add chromium.zip"
       - name: Push code
